css: fix a few visibility property references

--- a/src/sass/components/animation-frame-container.scss
+++ b/src/sass/components/animation-frame-container.scss
@@ -12,7 +12,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
-  visible: hidden;
+  visibility: hidden;
   opacity: 0;
 
   @include mobile-portrait() {
